--- a/index.html
+++ b/index.html
@@ -1,28 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <title>Jinay's Website</title>
+    <!--Import Google Icon Font-->
+    <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <!--Import materialize.css-->
+    <link type="text/css" rel="stylesheet" href="css/materialize.min.css"  media="screen,projection"/>
 
-    <!-- Bootstrap -->
-    <link href="css/bootstrap.min.css" rel="stylesheet">
-
-    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
-      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    <![endif]-->
+    <!--Let browser know website is optimized for mobile-->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <title>MasterSnipes</title>
   </head>
   <body>
-    <h1>Hello, world!</h1>
+    <nav class="black lighten-1">
+    <div class="container">
+    <div class="nav-wrapper">
+      <a href="#" class="brand-logo"><i class="large material-icons">code</i></a>
+      <ul id="nav-mobile" class=" right hide-on-med-and-down">
+        <li><a href="https://github.com/MasterSnipes">GitHub</a></li>
+        <li><a href="#projects">Projects</a></li>
+      </ul>
+    </div>
+    </div>
+    </nav>    
+    <div class="parallax-container">
+        <div class="parallax"><img src="img/color-square.jpg"></div>
+    </div>
+    <div class="section black">
+        <div class="row container">
+            <h2 class="header white-text text-darken-3">Welcome</h2>
+            <p class="white-text text-darken-3 lighten-3">Hello there user, welcome to my site! Here I will display my <b class="">projects, updates, </b>and <b>much more!</b></p>
+        </div>
+    </div>
+  <div class="parallax-container">
+    <div class="parallax"><img src="img/color-square.jpg"></div>
+  </div>
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
-    <script src="js/bootstrap.min.js"></script>
+    <script src="js/materialize.js"></script>
+    <script src="js/controller.js"></script>
   </body>
 </html>
