--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <!--Import Google Icon Font-->
-    <link href="css/styles.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <!--Import materialize.css-->
     <link type="text/css" rel="stylesheet" href="css/materialize.min.css"  media="screen,projection"/>
 
@@ -11,6 +11,7 @@
     <title>MasterSnipes</title>
   </head>
   <body>
+    <div class="navbar-fixed">
     <nav class="black lighten-1">
     <div class="container">
     <div class="nav-wrapper">
@@ -21,21 +22,23 @@
       </ul>
     </div>
     </div>
-    </nav>    
+    </nav>  
+    </div>  
     <div class="parallax-container">
-        <div class="parallax"><img src="img/color-square.jpg"></div>
+        <div class="parallax"><img src="img/lamps.jpg"></div>
     </div>
     <div class="section black">
         <div class="row container">
-            <h2 class="header white-text text-darken-3">Welcome</h2>
-            <p class="white-text text-darken-3 lighten-3">Hello there user, welcome to my site! Here I will display my <b class="">projects, updates, </b>and <b>much more!</b></p>
+            <h2 class="header white-text text-darken-3">Hello.</h2>
+            <p class="white-text text-darken-3 lighten-3"></p>
+            <a class="btn z-depth-2" onclick="Materialize.toast('You got a cookie.',1000);">Free Cookies</a>
         </div>
     </div>
   <div class="parallax-container">
-    <div class="parallax"><img src="img/color-square.jpg"></div>
+    <div class="parallax"><img src=""></div>
   </div>
 
-    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+    <!-- jQuery (necessary for Materialize's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
     <script src="js/materialize.js"></script>
