--- a/index.html
+++ b/index.html
@@ -17,7 +17,6 @@
     <div class="nav-wrapper">
       <a href="#" class="brand-logo"><i class="large material-icons">code</i></a>
       <ul id="nav-mobile" class=" right hide-on-med-and-down">
-        <li><a href="https://github.com/MasterSnipes">GitHub</a></li>
         <li><a href="#projects">Projects</a></li>
       </ul>
     </div>
@@ -34,9 +33,22 @@
             <a class="btn z-depth-2" onclick="Materialize.toast('You got a cookie.',1000);">Free Cookies</a>
         </div>
     </div>
-  <div class="parallax-container">
-    <div class="parallax"><img src=""></div>
-  </div>
+    <div class="parallax-container">
+    <div class="parallax"><img src="http://cdn.wallpapersafari.com/21/93/45XviW.jpg"></div>
+    </div>
+    <div class="section black">
+        <div class="row container" id="projects">
+            <h2 class="header white-text text-darken-3">Projects.</h2>
+            <h4 class="white-text text-darken-3">Current Projects</h4>
+            <ul class="white-text text-darken-3">
+                <li><a class="btn" onclick="Materialize.toast('You\'re already on it!', 1000);">This website (WIP)</a></li>
+            </ul>
+            <h4 class="white-text text-darken-3">Project Ideas</h4>
+            <ul class="white-text text-darken-3">
+                <li>Random Shower Thought generator (Reddit)(Nightmare.js/Phantom.js)</li>
+            </ul>
+        </div>
+    </div>
 
     <!-- jQuery (necessary for Materialize's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
