--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <!--Import materialize.css-->
     <link type="text/css" rel="stylesheet" href="css/materialize.min.css"  media="screen,projection"/>
-
+    <link rel="icon" 
+      type="image/ico" 
+      href="img/favicon.ico">
     <!--Let browser know website is optimized for mobile-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>MasterSnipes</title>
@@ -41,7 +43,7 @@
             <h2 class="header white-text text-darken-3">Projects.</h2>
             <h4 class="white-text text-darken-3">Current Projects</h4>
             <ul class="white-text text-darken-3">
-                <li><a class="btn" onclick="Materialize.toast('You\'re already on it!', 1000);">This website (WIP)</a></li>
+                <li><a class = "btn" target = "_blank" href="https://raw.githubusercontent.com/MasterSnipes/mastersnipes.github.io/master/index.html">This website</a></li>
             </ul>
             <h4 class="white-text text-darken-3">Project Ideas</h4>
             <ul class="white-text text-darken-3">
