index.html updates

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <nav class="black lighten-1">
     <div class="container">
     <div class="nav-wrapper">
-      <a href="#" class="brand-logo"><i class="large material-icons">code</i></a>
+      <a href="#" class="brand-logo">>_</a>
       <ul id="nav-mobile" class=" right hide-on-med-and-down">
         <li><a href="#projects">Projects</a></li>
       </ul>
@@ -32,18 +32,18 @@
         <div class="row container">
             <h2 class="header white-text text-darken-3">Hello.</h2>
             <p class="white-text text-darken-3 lighten-3"></p>
-            <a class="btn z-depth-2" onclick="Materialize.toast('You got a cookie.',1000);">Free Cookies</a>
+            <a class="btn z-depth-2 indigo" onclick="Materialize.toast('You got a cookie.',1000);">Free Cookies</a>
         </div>
     </div>
     <div class="parallax-container">
-    <div class="parallax"><img src="http://cdn.wallpapersafari.com/21/93/45XviW.jpg"></div>
+    <div class="parallax"><img src="https://s-media-cache-ak0.pinimg.com/originals/48/05/03/480503f804913623c6d6bb6bdf7d7864.jpg"></div>
     </div>
     <div class="section black">
         <div class="row container" id="projects">
             <h2 class="header white-text text-darken-3">Projects.</h2>
             <h4 class="white-text text-darken-3">Current Projects</h4>
             <ul class="white-text text-darken-3">
-                <li><a class = "btn" target = "_blank" href="https://raw.githubusercontent.com/MasterSnipes/mastersnipes.github.io/master/index.html">This website</a></li>
+                <li><a class = "btn" target = "_blank" href="https://github.com/MasterSnipes/mastersnipes.github.io">This website</a></li>
             </ul>
             <h4 class="white-text text-darken-3">Project Ideas</h4>
             <ul class="white-text text-darken-3">
