--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
       <a href="#" class="brand-logo">>_</a>
       <ul id="nav-mobile" class=" right hide-on-med-and-down">
         <li><a href="#projects">Projects</a></li>
+        <li><a href="#about">About</a></li>
       </ul>
     </div>
     </div>
@@ -36,7 +37,7 @@
         </div>
     </div>
     <div class="parallax-container">
-    <div class="parallax"><img src="https://s-media-cache-ak0.pinimg.com/originals/48/05/03/480503f804913623c6d6bb6bdf7d7864.jpg"></div>
+    <div class="parallax"><img src="img/geometry-bg.jpg"></div>
     </div>
     <div class="section black">
         <div class="row container" id="projects">
@@ -48,7 +49,21 @@
             <h4 class="white-text text-darken-3">Project Ideas</h4>
             <ul class="white-text text-darken-3">
                 <li>Random Shower Thought generator (Reddit)(Nightmare.js/Phantom.js)</li>
+                
             </ul>
+        </div>
+    </div>
+    <div class="parallax-container">
+        <div class="parallax"><img src="http://cdn.wallpapersafari.com/5/57/EQscPT.jpg"></div>
+    </div>
+    <div class="section black">
+        <div class="row container" id="about">
+            <h2 class="header white-text text-darken-3">About.</h2>
+            <p class="white-text text-darken-3">I am a website designer, coding enthusiast, computer nerd, gamer, and much much more.</p>
+        </div>
+        <div class="row container">
+            <!-- Place this tag where you want the button to render. -->
+            <a class="github-button" href="https://github.com/MasterSnipes" data-style="mega" aria-label="Follow @MasterSnipes on GitHub">Follow @MasterSnipes</a>
         </div>
     </div>
 
@@ -57,5 +72,7 @@
     <!-- Include all compiled plugins (below), or include individual files as needed -->
     <script src="js/materialize.js"></script>
     <script src="js/controller.js"></script>
+    <!-- Place this tag in your head or just before your close body tag. -->
+    <script async defer src="https://buttons.github.io/buttons.js"></script>
   </body>
 </html>
