--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             </ul>
             <h4 class="white-text text-darken-3">Project Ideas</h4>
             <ul class="white-text text-darken-3">
-                <li>Random Shower Thought generator (Reddit)(Nightmare.js/Phantom.js)</li>
+              <li><a href="https://mastersnipes.github.io/showerthoughts">Random Shower Thought generator (Reddit)(Nightmare.js/Phantom.js)</a></li>
                 
             </ul>
         </div>
