--- a/index.html
+++ b/index.html
@@ -45,10 +45,11 @@
             <h4 class="white-text text-darken-3">Current Projects</h4>
             <ul class="white-text text-darken-3">
                 <li><a class = "btn" target = "_blank" href="https://github.com/MasterSnipes/mastersnipes.github.io">This website</a></li>
+                <li><a href="https://github.com/MasterSnipes/showerthoughts/" class="btn" target="_blank">Showerthoughts</a></li>
             </ul>
             <h4 class="white-text text-darken-3">Project Ideas</h4>
             <ul class="white-text text-darken-3">
-                <li>Random Shower Thought generator (Reddit)(Nightmare.js/Phantom.js)</li>
+                <li>None</li>
                 
             </ul>
         </div>
