--- a/index.html
+++ b/index.html
@@ -53,6 +53,8 @@
                 <li>None</li>
                 
             </ul>
+            <br />
+            <a target='_blank' href="https://mastersnipes.github.io/playground/" class="btn">My Playground</a>
         </div>
     </div>
     <div class="parallax-container">
@@ -61,7 +63,7 @@
     <div class="section black">
         <div class="row container" id="about">
             <h2 class="header white-text text-darken-3">About.</h2>
-            <p class="white-text text-darken-3">I am a website designer, coding enthusiast, computer nerd, gamer, and much much more.</p>
+            <p class="white-text text-darken-3">I am a website designer, coding enthusiast, computer nerd, and gamer. I like making stuff and sharing it with others I guess.</p>
         </div>
         <div class="row container">
             <!-- Place this tag where you want the button to render. -->
