--- a/index.html
+++ b/index.html
@@ -46,6 +46,8 @@
                 <li><a class = "btn" target = "_blank" href="https://github.com/MasterSnipes/mastersnipes.github.io">This website</a></li>
                 <br>
                 <li><a href="https://github.com/MasterSnipes/showerthoughts/" class="btn" target="_blank">Showerthoughts</a></li>
+            	<li><a href="https://github.com/MasterSnipes/drakorans-dungeon" class="btn" target="_blank">Drakoran's Dungeon</a></li>
+            	<li><a href="https://github.com/MasterSnipes/terminal/" class="btn" target="_blank">Terminal</a></li>
             </ul>
             <h4 class="white-text text-darken-3">Project Ideas</h4>
             <ul class="white-text text-darken-3">
